# flatten

./: .flatignore  .flattenignore  .gitignore  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: publish.yml
src/: main.rs
